--- a/client/app/app.html
+++ b/client/app/app.html
@@ -1,4 +1,7 @@
-<!-- Place all UI elements intended to be present across all routes in this file -->
+<main-header></main-header>
+
 <div class="app">
   <div ui-view></div>
 </div>
+
+<main-footer></main-footer>
